--- a/addin/src/taskpane/taskpane.css
+++ b/addin/src/taskpane/taskpane.css
@@ -1,8 +1,3 @@
-/*
- * Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT license.
- * See LICENSE in the project root for license information.
- */
-
  html,
  body {
      width: 100%;
@@ -16,17 +11,6 @@
      padding: 0;
  }
 
- .ms-welcome__header {
-    padding: 20px;
-    padding-bottom: 30px;
-    padding-top: 100px;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-direction: column;
-    flex-direction: column;
-    align-items: center;
- }
-
  .ms-welcome__main {
     display: -webkit-flex;
     display: flex;
@@ -34,35 +18,16 @@
     flex-direction: column;
     -webkit-flex-wrap: nowrap;
     flex-wrap: nowrap;
-    -webkit-align-items: center;
-    align-items: center;
+    -webkit-align-items: flex-start;
+    align-items: flex-start;
     -webkit-flex: 1 0 0;
     flex: 1 0 0;
     padding: 10px 20px;
  }
 
- .ms-welcome__main > h2 {
-     width: 100%;
-     text-align: center;
- }
-
- .ms-welcome__features {
-     list-style-type: none;
-     margin-top: 20px;
- }
-
- .ms-welcome__features.ms-List .ms-ListItem {
-     padding-bottom: 20px;
-     display: -webkit-flex;
-     display: flex;
- }
-
- .ms-welcome__features.ms-List .ms-ListItem > .ms-Icon {
-     margin-right: 10px;
- }
 
  .ms-welcome__action.ms-Button--hero {
-     margin-top: 30px;
+     margin-top: 10px;
  }
 
 .ms-Button.ms-Button--hero .ms-Button-label {
